--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+a{
+    text-decoration: none;
+    color: #000;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.ProseMirror{
+    outline: none;
+}
+
+.contentview{
+    
+}
+
+.contentview > img{
+    display: block;
+    width: 500px;
+    margin: 20px auto;
+}
+
+.contentview > p{
+    margin: 10px;
 }
